setup project: added s3, dynamo

--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.645.0",
+    "@aws-sdk/client-s3": "^3.645.0",
     "@aws-sdk/lib-dynamodb": "^3.645.0",
+    "@aws-sdk/lib-storage": "^3.645.0",
+    "@aws-sdk/s3-request-presigner": "^3.645.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.4",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.4.0",
+    "@zimoykin/auth": "^1.0.18",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "joi": "^17.7.0",
