--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "joi": "^17.7.0",
+    "lodash": "^4.17.21",
+    "luxon": "^3.5.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
@@ -50,6 +52,8 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/lodash": "^4.17.7",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
