--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/lib-dynamodb": "^3.645.0",
     "@aws-sdk/lib-storage": "^3.645.0",
     "@aws-sdk/s3-request-presigner": "^3.645.0",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.4",
     "@nestjs/core": "^9.0.0",
@@ -33,6 +34,7 @@
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/swagger": "^7.4.0",
     "@zimoykin/auth": "^1.0.18",
+    "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
