--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.4",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.4.3",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/swagger": "^7.4.0",
+    "@zimoykin/amqp": "^0.0.3",
     "@zimoykin/auth": "^1.0.18",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
     "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -53,6 +57,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/lodash": "^4.17.7",
