--- a/package.json
+++ b/package.json
@@ -58,16 +58,18 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/amqplib": "^0.10.5",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.21",
     "@types/jest": "28.1.8",
     "@types/lodash": "^4.17.7",
     "@types/luxon": "^3.4.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
     "prettier": "^2.3.2",
