--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/swagger": "^7.4.0",
-    "@zimoykin/amqp": "^0.0.4",
     "@zimoykin/auth": "^1.0.18",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
+    "axios": "^1.7.7",
     "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
