--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy to AWS
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Позволяет запускать workflow вручную
 
 jobs:
   deploy:
@@ -11,8 +11,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+    - name: Set up AWS CLI
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Log in to AWS ECR
       env:
@@ -20,7 +24,7 @@ jobs:
         AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       run: |
         aws ecr get-login-password --region $AWS_REGION \
-        | docker login -u AWS -p $(aws ecr get-login-password --region $AWS_REGION) ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com
+        | docker login -u AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com
 
     - name: Build, tag, and push Docker image
       env:
@@ -34,6 +38,6 @@ jobs:
       run: |
         ssh -o "StrictHostKeyChecking=no" ec2-user@<EC2_INSTANCE_IP> \
         "docker pull $REGISTRY_URI/bb-pipelinetest:latest && \
-         docker stop <имя_контейнера> || true && \
-         docker rm <имя_контейнера> || true && \
-         docker run -d -p 80:3000 $REGISTRY_URI/bb-pipelinetest:latest"
+         docker stop gallery || true && \
+         docker rm gallery || true && \
+         docker run -d -p 80:3000 --name gallery $REGISTRY_URI/bb-pipelinetest:latest"
