--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -36,8 +36,10 @@ jobs:
           docker push $REGISTRY_URI/gallery:latest
 
       - name: Deploy to EC2
+        env: 
+          EC2_INSTANCE_IP: ${{ secrets.EC2_INSTANCE_IP }}
         run: |
-          ssh -o "StrictHostKeyChecking=no" ec2-user@<EC2_INSTANCE_IP> \
+          ssh -o "StrictHostKeyChecking=no" ec2-user@$EC2_INSTANCE_IP \
           "docker pull $REGISTRY_URI/gallery:latest && \
            docker stop gallery || true && \
            docker rm gallery || true && \
