aws: Deploy to EC2 -- updated

--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -50,12 +50,11 @@ jobs:
           sudo service docker start && \
           sudo usermod -aG docker ec2-user"
 
-      - name: Deploy to EC2
-        env:
-          REGISTRY_URI: '${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com'
-        run: |
-          ssh -o "StrictHostKeyChecking=no" ec2-user@${{ secrets.EC2_INSTANCE_IP }} \
-          "docker pull $REGISTRY_URI/gallery:latest && \
-           docker stop gallery || true && \
-           docker rm gallery || true && \
-           docker run -d -p 80:8081 --name gallery $REGISTRY_URI/gallery:latest"
+      - name: Deploy EC2
+        uses: bitovi/github-actions-deploy-docker-to-ec2@v1.0.1
+        with:
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_default_region: ${{ secrets.AWS_REGION }}
+
+          aws_elb_app_port: 8081
