--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -32,7 +32,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           docker build --build-arg NPM_TOKEN=${NPM_TOKEN} -t gallery .
-          docker tag gallery:$REGISTRY_URI/gallery:latest
+          docker tag gallery $REGISTRY_URI/gallery:latest
           docker push $REGISTRY_URI/gallery:latest
 
       - name: Set up SSH key
