--- a/.github/workflows/aws-deploy-ec2-from-ecr.yml
+++ b/.github/workflows/aws-deploy-ec2-from-ecr.yml
@@ -41,6 +41,9 @@ jobs:
            sudo service docker start && \
            sudo usermod -aG docker ec2-user"
 
+      - name: Create .env file
+        run: echo "${{ secrets.ENV_VARS }}" > .env
+
       - name: Deploy to EC2
         env:
           REGISTRY_REPO: '${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/gallery:latest'
@@ -52,4 +55,4 @@ jobs:
            docker pull $REGISTRY_REPO && \
            docker stop gallery || true && \
            docker rm gallery || true && \
-           docker run -d -p 80:8081 --name gallery $REGISTRY_REPO"
+           docker run -d -p 80:8081 --name gallery --env-file .env $REGISTRY_REPO"
