aws split to two operations

--- a/.github/workflows/aws-deploy-ec2-from-ecr.yml
+++ b/.github/workflows/aws-deploy-ec2-from-ecr.yml
@@ -42,7 +42,7 @@ jobs:
            sudo usermod -aG docker ec2-user"
 
       - name: Create .env file
-        run: echo "${{ secrets.ENV_VARS }}" > .env
+        run: echo "${{ secrets.ENV_VARS }}" > /home/ec2-user/.env
 
       - name: Deploy to EC2
         env:
@@ -55,4 +55,4 @@ jobs:
            docker pull $REGISTRY_REPO && \
            docker stop gallery || true && \
            docker rm gallery || true && \
-           docker run -d -p 80:8081 --name gallery --env-file .env $REGISTRY_REPO"
+           docker run -d -p 80:8081 --name gallery --env-file /home/ec2-user/.env $REGISTRY_REPO"
