--- a/.github/workflows/aws-deploy-ec2-from-ecr.yml
+++ b/.github/workflows/aws-deploy-ec2-from-ecr.yml
@@ -42,7 +42,7 @@ jobs:
            sudo usermod -aG docker ec2-user"
 
       - name: Create .env file
-        run: echo "${{ secrets.ENV_VARS }}" > .env
+        run: echo "${{ secrets.ENV_VARS }}" >> .env
 
       - name: Deploy to EC2
         env:
