--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -85,8 +85,10 @@ jobs:
           ssh -o "StrictHostKeyChecking=no" ec2-user@${EC2_INSTANCE_IP} \
           "docker login -u AWS -p $(aws ecr get-login-password --region ${AWS_REGION}) ${REGISTRY_URI} && \
            docker pull $REGISTRY_REPO && \
-           # docker stop ${PROJECT_NAME} || true && \
-           # docker rm ${PROJECT_NAME} || true && \
+           if [ \$(docker ps -aq -f name=${PROJECT_NAME}) ]; then \
+            docker stop ${PROJECT_NAME}; \
+            docker rm ${PROJECT_NAME}; \
+           fi && \
            docker run -d -p 3000:3000 --name ${PROJECT_NAME} --env-file .env $REGISTRY_REPO && \
            docker image prune -af"
 
