--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -78,18 +78,16 @@ jobs:
 
       - name: Deploy to EC2
         env:
+          REGISTRY_REPO: '${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${PROJECT_NAME}:latest'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          ssh -o "StrictHostKeyChecking=no" ec2-user@${EC2_INSTANCE_IP} \
-          "docker login -u AWS -p $(aws ecr get-login-password --region ${AWS_REGION}) ${REGISTRY_URI} && \
-           docker pull ${REGISTRY_REPO} && \
-           if [ \$(docker ps -aq -f name=${PROJECT_NAME}) ]; then \
-            docker stop ${PROJECT_NAME} ; \
-            docker rm ${PROJECT_NAME} ; \
-           fi && \
-           docker run -d -p 3000:3000 --name ${PROJECT_NAME} --env-file .env ${REGISTRY_REPO} && \
-           docker image prune -af"
+          ssh -o "StrictHostKeyChecking=no" ec2-user@${{ secrets.EC2_INSTANCE_IP }} \
+          "docker login -u AWS -p $(aws ecr get-login-password --region ${{ secrets.AWS_REGION }}) ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com && \
+           docker pull $REGISTRY_REPO && \
+           docker stop ${PROJECT_NAME} || true && \
+           docker rm ${PROJECT_NAME} || true && \
+           docker run -d -p 3000:3000 --name ${PROJECT_NAME} --env-file .env $REGISTRY_REPO"
 
         #  optional
       - name: Clean up SSH key and Env
