--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -27,6 +27,7 @@ jobs:
           echo "NPM_TOKEN=${{ secrets.NPM_TOKEN }}" >> $GITHUB_ENV
           echo "BRANCH_NAME=$(echo $GITHUB_REF | sed 's|refs/heads/||')" >> $GITHUB_ENV
           echo "PROJECT_NAME=$(jq -r .name < package.json)" >> $GITHUB_ENV
+          echo "REGISTRY_REPO='${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${PROJECT_NAME}:${{ github.run_id }}'
 
       - name: Log in to AWS ECR
         run: |
@@ -52,8 +53,9 @@ jobs:
       - name: Build, tag, and push Docker image
         run: |
           docker build --build-arg NPM_TOKEN=${NPM_TOKEN} -t ${PROJECT_NAME} .
-          docker tag ${PROJECT_NAME} $REGISTRY_URI/${PROJECT_NAME}:${{ github.run_id }}
-          docker push $REGISTRY_URI/$PROJECT_NAME:${{ github.run_id }}
+          docker tag ${PROJECT_NAME} ${REGISTRY_REPO}
+          docker push ${REGISTRY_REPO}
+          echo "${}"
 
       - name: Set up SSH key
         run: |
@@ -78,7 +80,6 @@ jobs:
 
       - name: Deploy to EC2
         env:
-          REGISTRY_REPO: '${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${PROJECT_NAME}:${{ github.run_id }}'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
